openTM2ScripterGUI/src/de/ibm/com/opentm2scripteride/parser/ScriptParser.java
/*! \file
	Description:
	
	Copyright Notice:

	Copyright (C) 1990-2014, International Business Machines
	Corporation and others. All rights reserved
*/
// $ANTLR 3.4 C:\\eclipseworkspace\\openTM2ScripterGUI-new\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g 2014-11-03 14:08:06

  package de.ibm.com.opentm2scripteride.parser;
  
  import java.util.ArrayList;
  import de.ibm.com.opentm2scripteride.models.ScriptModel;
  import de.ibm.com.opentm2scripteride.models.CommandModel;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class ScriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "BOOLOP", "C", "COMMENT", "CONSTANT", "D", "E", "ELSE", "ELSEIF", "END", "ENDFOR", "ENDIF", "F", "FOR", "HASHMARKER", "I", "IF", "L", "MOSTCHAR", "N", "NEWLINE", "NL", "NORMALCHAR", "NORMALWORD", "O", "QUOTE", "R", "S", "SPACE", "SPECIALCHAR", "T", "TESTCASE", "VARIABLE", "WORD", "WS", "'\"'", "'$'", "'%'", "','"
    };

    public static final int EOF=-1;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int A=4;
    public static final int BOOLOP=5;
    public static final int C=6;
    public static final int COMMENT=7;
    public static final int CONSTANT=8;
    public static final int D=9;
    public static final int E=10;
    public static final int ELSE=11;
    public static final int ELSEIF=12;
    public static final int END=13;
    public static final int ENDFOR=14;
    public static final int ENDIF=15;
    public static final int F=16;
    public static final int FOR=17;
    public static final int HASHMARKER=18;
    public static final int I=19;
    public static final int IF=20;
    public static final int L=21;
    public static final int MOSTCHAR=22;
    public static final int N=23;
    public static final int NEWLINE=24;
    public static final int NL=25;
    public static final int NORMALCHAR=26;
    public static final int NORMALWORD=27;
    public static final int O=28;
    public static final int QUOTE=29;
    public static final int R=30;
    public static final int S=31;
    public static final int SPACE=32;
    public static final int SPECIALCHAR=33;
    public static final int T=34;
    public static final int TESTCASE=35;
    public static final int VARIABLE=36;
    public static final int WORD=37;
    public static final int WS=38;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ScriptParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ScriptParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return ScriptParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g"; }



    // $ANTLR start "script"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:29:1: script returns [ScriptModel scriptModel] : (r= robust_expression )* ;
    public final ScriptModel script() throws RecognitionException {
        ScriptModel scriptModel = null;


        CommandModel r =null;


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:29:41: ( (r= robust_expression )* )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:30:2: (r= robust_expression )*
            {
            if ( state.backtracking==0 ) { scriptModel = new ScriptModel(); }

            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:31:2: (r= robust_expression )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==COMMENT||(LA1_0 >= FOR && LA1_0 <= HASHMARKER)||LA1_0==IF||LA1_0==NL||LA1_0==NORMALWORD||LA1_0==SPACE||LA1_0==TESTCASE||(LA1_0 >= WS && LA1_0 <= 42)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:31:4: r= robust_expression
            	    {
            	    pushFollow(FOLLOW_robust_expression_in_script62);
            	    r=robust_expression();

            	    state._fsp--;
            	    if (state.failed) return scriptModel;

            	    if ( state.backtracking==0 ) { scriptModel.add(r); }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return scriptModel;
    }
    // $ANTLR end "script"



    // $ANTLR start "robust_expression"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:36:1: robust_expression returns [CommandModel cm] : ( ( expression )=>e= expression |u= unknown );
    public final CommandModel robust_expression() throws RecognitionException {
        CommandModel cm = null;


        CommandModel e =null;

        CommandModel u =null;


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:36:44: ( ( expression )=>e= expression |u= unknown )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==COMMENT) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==HASHMARKER) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==SPACE) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==IF) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==FOR) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==TESTCASE) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==NORMALWORD) && (synpred1_Script())) {
                alt2=1;
            }
            else if ( (LA2_0==NL||(LA2_0 >= WS && LA2_0 <= 42)) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return cm;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:37:5: ( expression )=>e= expression
                    {
                    pushFollow(FOLLOW_expression_in_robust_expression96);
                    e=expression();

                    state._fsp--;
                    if (state.failed) return cm;

                    if ( state.backtracking==0 ) { cm = e; }

                    }
                    break;
                case 2 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:38:7: u= unknown
                    {
                    pushFollow(FOLLOW_unknown_in_robust_expression112);
                    u=unknown();

                    state._fsp--;
                    if (state.failed) return cm;

                    if ( state.backtracking==0 ) { cm = u; }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {

                  cm = CommandModel.newById(re.line - 1, "unknown");
                  re.input.consume();
                
        }

        finally {
        	// do for sure before leaving
        }
        return cm;
    }
    // $ANTLR end "robust_expression"



    // $ANTLR start "unknown"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:46:1: unknown returns [CommandModel cm] : c= crapline n= NL ;
    public final CommandModel unknown() throws RecognitionException {
        CommandModel cm = null;


        Token n=null;
        ScriptParser.crapline_return c =null;


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:46:34: (c= crapline n= NL )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:47:5: c= crapline n= NL
            {
            pushFollow(FOLLOW_crapline_in_unknown168);
            c=crapline();

            state._fsp--;
            if (state.failed) return cm;

            if ( state.backtracking==0 ) { String txt = (c!=null?input.toString(c.start,c.stop):null);
                                if (txt != null && !txt.isEmpty()) {
                                  cm = CommandModel.newById(0, "unknown");
                                  cm.getBody().setParameter("text", txt);
                                }
                              }

            n=(Token)match(input,NL,FOLLOW_NL_in_unknown181); if (state.failed) return cm;

            if ( state.backtracking==0 ) { if (cm != null) cm.setStartLine(n.getLine() - 1); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cm;
    }
    // $ANTLR end "unknown"


    public static class crapline_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "crapline"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:57:1: crapline : ( '$' | '%' | '\"' | ',' | WS )* ;
    public final ScriptParser.crapline_return crapline() throws RecognitionException {
        ScriptParser.crapline_return retval = new ScriptParser.crapline_return();
        retval.start = input.LT(1);


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:57:9: ( ( '$' | '%' | '\"' | ',' | WS )* )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:57:11: ( '$' | '%' | '\"' | ',' | WS )*
            {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:57:11: ( '$' | '%' | '\"' | ',' | WS )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0 >= WS && LA3_0 <= 42)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:
            	    {
            	    if ( (input.LA(1) >= WS && input.LA(1) <= 42) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	        state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "crapline"



    // $ANTLR start "expression"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:60:1: expression returns [CommandModel cm] : (c= commentblock |m= marker |s= controlstruct |f= function );
    public final CommandModel expression() throws RecognitionException {
        CommandModel cm = null;


        CommandModel c =null;

        CommandModel m =null;

        CommandModel s =null;

        CommandModel f =null;


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:60:37: (c= commentblock |m= marker |s= controlstruct |f= function )
            int alt4=4;
            switch ( input.LA(1) ) {
            case COMMENT:
                {
                alt4=1;
                }
                break;
            case HASHMARKER:
                {
                alt4=2;
                }
                break;
            case SPACE:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==FOR||LA4_3==IF||LA4_3==SPACE||LA4_3==TESTCASE) ) {
                    alt4=3;
                }
                else if ( (LA4_3==NORMALWORD) ) {
                    alt4=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return cm;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae;

                }
                }
                break;
            case FOR:
            case IF:
            case TESTCASE:
                {
                alt4=3;
                }
                break;
            case NORMALWORD:
                {
                alt4=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return cm;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:61:5: c= commentblock
                    {
                    pushFollow(FOLLOW_commentblock_in_expression250);
                    c=commentblock();

                    state._fsp--;
                    if (state.failed) return cm;

                    if ( state.backtracking==0 ) { cm = c; }

                    }
                    break;
                case 2 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:62:4: m= marker
                    {
                    pushFollow(FOLLOW_marker_in_expression265);
                    m=marker();

                    state._fsp--;
                    if (state.failed) return cm;

                    if ( state.backtracking==0 ) { cm = m; }

                    }
                    break;
                case 3 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:63:7: s= controlstruct
                    {
                    pushFollow(FOLLOW_controlstruct_in_expression289);
                    s=controlstruct();

                    state._fsp--;
                    if (state.failed) return cm;

                    if ( state.backtracking==0 ) { cm = s; }

                    }
                    break;
                case 4 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:64:7: f= function
                    {
                    pushFollow(FOLLOW_function_in_expression305);
                    f=function();

                    state._fsp--;
                    if (state.failed) return cm;

                    if ( state.backtracking==0 ) { cm = f; }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cm;
    }
    // $ANTLR end "expression"



    // $ANTLR start "function"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:70:1: function returns [CommandModel cm] : ( SPACE )? c= NORMALWORD a= argumentlist NL ;
    public final CommandModel function() throws RecognitionException {
        CommandModel cm = null;


        Token c=null;
        List a =null;


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:70:35: ( ( SPACE )? c= NORMALWORD a= argumentlist NL )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:71:4: ( SPACE )? c= NORMALWORD a= argumentlist NL
            {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:71:4: ( SPACE )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==SPACE) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:71:4: SPACE
                    {
                    match(input,SPACE,FOLLOW_SPACE_in_function349); if (state.failed) return cm;

                    }
                    break;

            }


            c=(Token)match(input,NORMALWORD,FOLLOW_NORMALWORD_in_function358); if (state.failed) return cm;

            pushFollow(FOLLOW_argumentlist_in_function366);
            a=argumentlist();

            state._fsp--;
            if (state.failed) return cm;

            if ( state.backtracking==0 ) { cm = new CommandModel( c.getLine() - 1, (c!=null?c.getText():null), a); }

            match(input,NL,FOLLOW_NL_in_function372); if (state.failed) return cm;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cm;
    }
    // $ANTLR end "function"



    // $ANTLR start "commentblock"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:78:1: commentblock returns [CommandModel cm] : (c= comment )+ ;
    public final CommandModel commentblock() throws RecognitionException {
        CommandModel cm = null;


        CommandModel c =null;


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:78:39: ( (c= comment )+ )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:79:4: (c= comment )+
            {
            if ( state.backtracking==0 ) { cm = CommandModel.newById(0, "commentblock"); }

            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:80:4: (c= comment )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==COMMENT) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:80:6: c= comment
            	    {
            	    pushFollow(FOLLOW_comment_in_commentblock403);
            	    c=comment();

            	    state._fsp--;
            	    if (state.failed) return cm;

            	    if ( state.backtracking==0 ) { cm.add( c ); }

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
            	    if (state.backtracking>0) {state.failed=true; return cm;}
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            if ( state.backtracking==0 ) { 
                 if (cm.size() == 1) {
                   cm = cm.get(0);
                 } else {
                   cm.setStartLine( cm.get(0).getStartLine() );
                 }
               }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cm;
    }
    // $ANTLR end "commentblock"



    // $ANTLR start "comment"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:91:1: comment returns [CommandModel cm] : c= COMMENT NL ;
    public final CommandModel comment() throws RecognitionException {
        CommandModel cm = null;


        Token c=null;

        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:91:34: (c= COMMENT NL )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:92:3: c= COMMENT NL
            {
            c=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_comment437); if (state.failed) return cm;

            if ( state.backtracking==0 ) { cm = new CommandModel( c.getLine() - 1, "*", (c!=null?c.getText():null).substring(1)); }

            match(input,NL,FOLLOW_NL_in_comment445); if (state.failed) return cm;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cm;
    }
    // $ANTLR end "comment"


    public static class argument_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "argument"
    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:97:1: argument : ( QUOTE | CONSTANT | VARIABLE | NORMALWORD | SPACE | keyword | WORD )* ;
    public final ScriptParser.argument_return argument() throws RecognitionException {
        ScriptParser.argument_return retval = new ScriptParser.argument_return();
        retval.start = input.LT(1);


        try {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:97:9: ( ( QUOTE | CONSTANT | VARIABLE | NORMALWORD | SPACE | keyword | WORD )* )
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:97:10: ( QUOTE | CONSTANT | VARIABLE | NORMALWORD | SPACE | keyword | WORD )*
            {
            // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:97:10: ( QUOTE | CONSTANT | VARIABLE | NORMALWORD | SPACE | keyword | WORD )*
            loop7:
            do {
                int alt7=8;
                switch ( input.LA(1) ) {
                case QUOTE:
                    {
                    alt7=1;
                    }
                    break;
                case CONSTANT:
                    {
                    alt7=2;
                    }
                    break;
                case VARIABLE:
                    {
                    alt7=3;
                    }
                    break;
                case NORMALWORD:
                    {
                    alt7=4;
                    }
                    break;
                case SPACE:
                    {
                    alt7=5;
                    }
                    break;
                case ELSE:
                case ELSEIF:
                case END:
                case ENDFOR:
                case ENDIF:
                case FOR:
                case IF:
                case TESTCASE:
                    {
                    alt7=6;
                    }
                    break;
                case WORD:
                    {
                    alt7=7;
                    }
                    break;

                }

                switch (alt7) {
            	case 1 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:98:13: QUOTE
            	    {
            	    match(input,QUOTE,FOLLOW_QUOTE_in_argument469); if (state.failed) return retval;

            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:99:13: CONSTANT
            	    {
            	    match(input,CONSTANT,FOLLOW_CONSTANT_in_argument483); if (state.failed) return retval;

            	    }
            	    break;
            	case 3 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:100:13: VARIABLE
            	    {
            	    match(input,VARIABLE,FOLLOW_VARIABLE_in_argument497); if (state.failed) return retval;

            	    }
            	    break;
            	case 4 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:101:13: NORMALWORD
            	    {
            	    match(input,NORMALWORD,FOLLOW_NORMALWORD_in_argument511); if (state.failed) return retval;

            	    }
            	    break;
            	case 5 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:102:13: SPACE
            	    {
            	    match(input,SPACE,FOLLOW_SPACE_in_argument525); if (state.failed) return retval;

            	    }
            	    break;
            	case 6 :
            	    // C:\\eclipseworkspace\\openTM2ScripterGUI\\src\\de\\ibm\\com\\opentm2scripteride\\parser\\Script.g:103:13: keyword
            	    {
            	    pushFollow(FOLLOW_keyword_in_argument539);
            	    keyword();

            	    state._fsp--;
            	    if (state.failed) return retval;
